--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Header Section -->
     <header>
         <div class="logo">
-            <h2>My Portfolio</h2>
+            <h2>Varshith's Vault</h2>
         </div>
         <nav>
             <ul>
