--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                     <a href="#"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
-            <div class="contact-form">
+            <!-- <div class="contact-form">
                 <form id="contactForm">
                     <div class="form-group">
                         <input type="text" id="name" name="name" placeholder="Your Name" required>
@@ -320,7 +320,7 @@
                 </form>
             </div>
         </div>
-    </section>
+    </section> -->
     
 
     <!-- Footer -->
