--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
            
 
             
-            <a href="RESUME (10).pdf" target=_blank class="btn btn-primary"> <i class="fas fa-download"></i> View Resume</a>
+            <a href="MANIVARSHITH_RESUME.pdf" target=_blank class="btn btn-primary"> <i class="fas fa-download"></i> View Resume</a>
             <a href="#projects" class="btn btn-secondary"><i class="fas fa-eye"></i> View Projects</a>
         </div>
     </section>
